app-deployment-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-dep-v2
  labels:
    app: app-v2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app-v2
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: app-v2
    spec:
      containers:
        - name: web
          image: localhost:32000/web:v2
          ports:
            - containerPort: 5000
          readinessProbe:
            httpGet:
              path: /readiness
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /liveness
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 5
            
          imagePullPolicy: Always
