app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-dep
  labels:
    app: app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: web
          image: localhost:32000/web:latest
          ports:
            - containerPort: 5000
          readinessProbe:
            httpGet:
              path: /readiness
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /liveness
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 5
            
          imagePullPolicy: Always
