app-service-v2.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app-v2
  name: app-svc-v2
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: app-v2
  type: ClusterIP
